# WSQ-PINN

./: .gitignore  README.md  pyproject.toml
src/components/handling/: exceptions.py
src/components/model/: model.py  wsqmodel_functions.py
src/pipeline/: train_pipeline.py
